--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
             font-weight: bold;
             color: #0066cc;
         }
+        .light{
+            color: #ddd;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div id="date"></div>
         <h1 id="water-time"></h1>
-        <p>Incorrect? Message Gyan to fix</p>
+        <p class="light">Incorrect? Message Gyan to fix</p>
     </div>
 
     <script>
