--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Water Supply Checker</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,20 +15,46 @@
             background-color: #f0f8ff;
         }
         .container {
-            text-align: center;
-            background-color: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
         }
         h1 {
             color: #333;
         }
-        #date, #water-time {
-            font-size: 1.5rem;
-            margin: 1rem 0;
+
+        .chip{
+            display: inline-block;
+            font-size: 12px;
+            color: #fff;
+            background-color: #0066cc;
+            border-radius: 4px;
+            padding: 4px 6px;
+            text-transform: uppercase;
+            margin-bottom: 20px;
         }
-        #water-time {
+
+        .cards {
+            display: flex;
+            gap: 1rem;
+            align-items: stretch;
+            justify-content: center;
+            margin: 1rem;
+            flex-direction: column;
+        }
+        .card {
+            flex: 1 1 200px;
+            border: 1px solid #e6f0ff;
+            border-radius: 10px;
+            padding: 1rem;
+            background: #ffffff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        }
+        .card-title {
+            font-size: 1rem;
+            color: #666;
+            margin-bottom: 0.5rem;
+        }
+        .time {
+            font-size: 2rem;
             font-weight: bold;
             color: #0066cc;
         }
@@ -39,27 +65,44 @@
 </head>
 <body>
     <div class="container">
-        <div id="date"></div>
-        <h1 id="water-time"></h1>
+        <div class="cards">
+            <div class="card">
+
+                <div class="chip">Today</div>
+                <div class="card-title" id="today-date">Today</div>
+                <div class="time" id="today-time"></div>
+            </div>
+            <div class="card">
+                <div class="chip">Tomorrow</div>
+                <div class="card-title" id="tomorrow-date">Tomorrow</div>
+                <div class="time" id="tomorrow-time"></div>
+            </div>
+        </div>
         <p class="light">Incorrect? Message Gyan to fix</p>
     </div>
 
     <script>
-        function checkWaterSupply() {
-            const today = new Date();
+        function getSupplyTimeFor(date) {
             const startDate = new Date(2024, 6, 20); // July 20, 2024 (months are 0-indexed)
-            
-            const diffDays = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
-            const supplyTime = diffDays % 2 === 0 ? "6:30 am" : "7:30 am";
-
-            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            const dateString = today.toLocaleDateString('en-US', options);
-
-            document.getElementById('date').textContent = `Today is ${dateString}`;
-            document.getElementById('water-time').textContent = `💧 ${supplyTime}`;
+            const msPerDay = 1000 * 60 * 60 * 24;
+            const diffDays = Math.floor((date - startDate) / msPerDay);
+            return diffDays % 2 === 0 ? "6:30 am" : "7:30 am";
         }
 
-        checkWaterSupply();
+        (function renderCards() {
+            const today = new Date();
+            const tomorrow = new Date(today);
+            tomorrow.setDate(today.getDate() + 1);
+
+            const todayTime = getSupplyTimeFor(today);
+            const tomorrowTime = getSupplyTimeFor(tomorrow);
+
+            document.getElementById('today-date').textContent = `${today.toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })}`;
+            document.getElementById('tomorrow-date').textContent = `${tomorrow.toLocaleDateString('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })}`;
+
+            document.getElementById('today-time').textContent = `💧 ${todayTime}`;
+            document.getElementById('tomorrow-time').textContent = `💧 ${tomorrowTime}`;
+        })();
     </script>
 </body>
 </html>
