--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             elements.tomorrowDate.textContent = formatDate(tomorrow);
 
             // Update times
-            elements.todayTime.textContent = `💧 Should be ${todaySupplyTime}`;
-            elements.tomorrowTime.textContent = `💧 Should be ${tomorrowSupplyTime}`;
+            elements.todayTime.textContent = `💧 Should start ${todaySupplyTime}`;
+            elements.tomorrowTime.textContent = `💧 Should start ${tomorrowSupplyTime}`;
 
             // Update today card state
             const shouldFade = hasSupplyTimePassed(todaySupplyTime);
